statefulset/jenkins-agic-ingress.yaml
---
## BASIC INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 80
