statefulset/jenkins-nginx-ingress.yaml
---
# NGINX
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
